# i3-pager

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  CMakeLists.txt  README.md
.github/workflows/: build.yml
plasmoid/: metadata.desktop  metadata.json
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: configGeneral.qml  configScreens.qml  main.qml  screens.js
src/: CMakeLists.txt  i3listener.cpp  i3listener.h  i3pager.cpp  i3pager.h  plugin.cpp  plugin.h  qmldir  workspace.cpp  workspace.h
